--- a/index.html
+++ b/index.html
@@ -150,22 +150,11 @@
     atualizar("uv_index", "uv_index");
     atualizar("wet_bulb_temperature_2m", "wet_bulb_temperature_2m");
   });
-  axios.get("https://api.rss2json.com/v1/api.json?rss_url=https://www.canalrural.com.br/feed/")
-    .then(res => {
-      const noticias = res.data.items.slice(0, 3);
-      const container = document.getElementById("feed-agro");
-      container.innerHTML = "";
-      noticias.forEach(item => {
-        const div = document.createElement("div");
-        div.className = "noticia-card";
-        div.innerHTML = `
-          <h3><a href="${item.link}" target="_blank">${item.title}</a></h3>
-          <p>${item.description.slice(0, 100)}...</p>
-          ${item.thumbnail ? `<img src="${item.thumbnail}" alt="Imagem da notícia">` : ""}
-        `;
-        container.appendChild(div);
-      });
-    });
+  aaxios.get("https://api.rss2json.com/v1/api.json?rss_url=https://www.canalrural.com.br/feed/")
+  .then(res => {
+    console.log(res.data.items[0]); // Mostra a estrutura completa do item
+  });
+  
 </script>
 <!-- Botão flutuante do WhatsApp -->
 <a href="https://wa.me/5567996150411?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF." 
