--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
   </div>
 </section>
 
-<section class="noticias-agro">
-  <h2>Notícias sobre Agricultura e Agronegócio</h2>
-  <div id="feed-agro"><p>Carregando notícias...</p></div>
+<section id="noticias">
+  <h2>📰 Notícias sobre Agricultura e Agronegócio</h2>
+  <div id="feed-agro">Carregando notícias...</div>
 </section>
+
 
 <footer class="rodape">
   <div class="rodape-container">
@@ -150,11 +151,8 @@
     atualizar("uv_index", "uv_index");
     atualizar("wet_bulb_temperature_2m", "wet_bulb_temperature_2m");
   });
-  aaxios.get("https://api.rss2json.com/v1/api.json?rss_url=https://www.canalrural.com.br/feed/")
-  .then(res => {
-    console.log(res.data.items[0]); // Mostra a estrutura completa do item
-  });
-  
+   
+
 </script>
 <!-- Botão flutuante do WhatsApp -->
 <a href="https://wa.me/5567996150411?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF." 
@@ -167,5 +165,35 @@
    class="instagram-float" target="_blank">
   <img src="images/instagram.png" alt="Nosso Instagram" style="width:60px; height:60px;">
 </a>
+<script>
+  function extrairImagemDoHTML(html) {
+    const match = html.match(/<img[^>]+src="([^">]+)"/);
+    return match ? match[1] : null;
+  }
+
+  axios.get("https://api.rss2json.com/v1/api.json?rss_url=https://www.canalrural.com.br/feed/&api_key=SUA_CHAVE_AQUI")
+    .then(res => {
+      const noticias = res.data.items.slice(0, 3); // mostra só 3
+      const container = document.getElementById("feed-agro");
+      container.innerHTML = "";
+
+      noticias.forEach(item => {
+        const imagem = extrairImagemDoHTML(item.description);
+        const div = document.createElement("div");
+        div.className = "noticia-card";
+        div.innerHTML = `
+          <img src="${imagem}" alt="Imagem da notícia">
+          <h3><a href="${item.link}" target="_blank">${item.title}</a></h3>
+          <p>${item.description.replace(/<[^>]+>/g, '').slice(0, 150)}...</p>
+        `;
+        container.appendChild(div);
+      });
+    })
+    .catch(err => {
+      console.error("Erro ao buscar notícias:", err);
+      document.getElementById("feed-agro").innerHTML = "<p>Não foi possível carregar as notícias.</p>";
+    });
+</script>
+
 </body>
 </html>
