--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
     return match ? match[1] : null;
   }
 
-  axios.get("https://api.rss2json.com/v1/api.json?rss_url=https://www.canalrural.com.br/feed/&api_key=SUA_CHAVE_AQUI")
+  axios.get("https://api.rss2json.com/v1/api.json?rss_url=https://www.canalrural.com.br/feed/&api_key=p2r9yydziwdemrw2trgbtubwqhlthlylqmp8nlip")
+
     .then(res => {
       const noticias = res.data.items.slice(0, 3); // mostra só 3
       const container = document.getElementById("feed-agro");
