Feed corrigido para o AgroLink com estrutura válida

--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
     return match ? match[1] : null;
   }
 
-  axios.get("https://api.rss2json.com/v1/api.json?rss_url=https://www.embrapa.br/busca-de-noticias/rss&api_key=p2r9yydziwdemrw2trgbtubwqhlthlylqmp8nlip")
+  axios.get("https://api.rss2json.com/v1/api.json?rss_url=https://www.agrolink.com.br/rss/noticias.xml&api_key=p2r9yydziwdemrw2trgbtubwqhlthlylqmp8nlip")
+
 
 
     .then(res => {
