Corrige chamada para API local de notícias

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <img src="images/instagram.png" alt="Nosso Instagram" style="width:60px; height:60px;">
 </a>
 <script>
- axios.get("https://secaf-rss-api.vercel.app/api/rss")
+ axios.get("/api/rss")
 
 
     .then(res => {
